<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/tan_background"
tools:context=".game">


<TextView
    android:id="@+id/TurnPlayerText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="28dp"

    android:fontFamily="@font/comic_sans_ms3"
    android:text="@string/Current_Turn"
    android:textColor="@color/black"

    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.498"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/Player_1_Name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="100dp"
    android:layout_marginTop="52dp"

    android:fontFamily="@font/comic_sans_ms3"
    android:text="@string/Player_1"
    android:textColor="@color/black"

    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/TurnPlayerName"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="178dp"
    android:layout_marginTop="52dp"

    android:fontFamily="@font/comic_sans_ms3"
    android:text=""
    android:textColor="@color/black"

    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/Player_2_Name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="256dp"
    android:layout_marginTop="55dp"

    android:fontFamily="@font/comic_sans_ms3"
    android:text="@string/Player_2"
    android:textColor="@color/black"

    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />




<TextView
    android:id="@+id/Player1Symbol"
    android:layout_width="55dp"
    android:layout_height="50dp"
    android:layout_marginStart="100dp"


    android:fontFamily="@font/comic_sans_ms3"
    android:gravity="center"
    android:text="@string/x"
    android:textColor="@color/red"
    android:textSize="27sp"

    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/Player_1_Name" />

<TextView
    android:id="@+id/CurrentPlayerSymbol"
    android:layout_width="55dp"
    android:layout_height="50dp"
    android:layout_marginTop="25dp"

    android:fontFamily="@font/comic_sans_ms3"
    android:gravity="center"
    android:text=""
    android:textColor="@color/red"
    android:textSize="27sp"

    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/TurnPlayerText" />


<TextView
    android:id="@+id/Player2Symbol"
    android:layout_width="55dp"
    android:layout_height="50dp"
    android:layout_marginStart="256dp"

    android:fontFamily="@font/comic_sans_ms3"
    android:gravity="center"
    android:text="@string/o"
    android:textColor="@color/blue"
    android:textSize="27sp"

    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/Player_2_Name" />


<!-- You can turn off default margins to get rid of grid spacing -->
<GridLayout
    android:id="@+id/light_grid"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="150dp"
    android:columnCount="3"
    android:rowCount="3"
    android:useDefaultMargins="true"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <Button
        android:id="@+id/button00"
        style="@style/TicTacToeButton" />

    <Button
        android:id="@+id/button01"
        style="@style/TicTacToeButton" />
    <Button
        android:id="@+id/button02"
        style="@style/TicTacToeButton" />
    <Button
        android:id="@+id/button10"
        style="@style/TicTacToeButton" />
    <Button
        android:id="@+id/button11"
        style="@style/TicTacToeButton" />
    <Button
        android:id="@+id/button12"
        style="@style/TicTacToeButton" />
    <Button
        android:id="@+id/button20"
        style="@style/TicTacToeButton" />
    <Button
        android:id="@+id/button21"
        style="@style/TicTacToeButton" />
    <Button
        android:id="@+id/button22"
        style="@style/TicTacToeButton" />
</GridLayout>


<android.widget.Button
    android:id="@+id/new_game_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="164dp"

    android:background="@drawable/round_shape_btn_start_game"
    android:fontFamily="@font/comic_sans_ms3"
    android:text="@string/NewGame"
    android:textColor="@color/black"

    android:textSize="30sp"

    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.497"
    app:layout_constraintStart_toStartOf="parent" />

<android.widget.Button
    android:id="@+id/exit_button"
    android:layout_width="171dp"
    android:layout_height="48dp"
    android:layout_gravity="center"
    android:layout_marginBottom="104dp"

    android:background="@drawable/round_shape_btn_start_game"
    android:fontFamily="@font/comic_sans_ms3"
    android:text="@string/Exit"
    android:textColor="@color/red"
    android:textSize="30sp"

    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>